--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -2,4 +2,7 @@
   <a href="http://software-carpentry.org" title="Software Carpentry">
     <img alt="Software Carpentry banner" src="{{site.swc_site}}/img/software-carpentry-banner.png" />
   </a>
+  <a href="http://software-carpentry.org" title="Data Carpentry">
+    <img alt="Data Carpentry banner" src="{{site.dc_site}}/assets/img/DC2_logo_small.png" style="height: 90px;"/>
+  </a>
 </div>
