Configuration for the Manchester workshop.

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,4 +5,7 @@
   <a href="http://software-carpentry.org" title="Data Carpentry">
     <img alt="Data Carpentry banner" src="{{site.dc_site}}/assets/img/DC2_logo_small.png" style="height: 90px;"/>
   </a>
+  <a href="http://software-carpentry.org" title="ELIXIR-UK">
+    <img alt="ELIXIR-UK banner" src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png" style="height: 90px;"/>
+  </a>
 </div>
