--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -27,7 +27,7 @@
   <div class="jumbotron" style="padding: 20px; margin: 0px;">
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <h2>
+        <h2 style="margin-top: 10px;">
           {{page.title}}
         </h2>
         <h3>{{page.humandate}}{% if page.humantime %}, {{page.humantime}}{% endif %}</h3>
