--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,11 +1,8 @@
-<div class="banner">
-  <a href="http://software-carpentry.org" title="Software Carpentry">
-    <img alt="Software Carpentry banner" src="{{site.swc_site}}/img/software-carpentry-banner.png" />
-  </a>
-  <a href="http://software-carpentry.org" title="Data Carpentry">
-    <img alt="Data Carpentry banner" src="{{site.dc_site}}/assets/img/DC2_logo_small.png" style="height: 90px;"/>
-  </a>
-  <a href="http://software-carpentry.org" title="ELIXIR-UK">
+<div class="banner" style="align: center;">
+  <a href="http://elixir-uk.org" title="ELIXIR-UK">
     <img alt="ELIXIR-UK banner" src="http://www.tgac.ac.uk/uploads/images/Outreach/ELIXIR_node_UK.png" style="height: 90px;"/>
+  </a>
+  <a href="http://www.elixir-finland.org/" title="ELIXIR-FI">
+    <img alt="ELIXIR-FI banner" src="https://www.elixir-europe.org/system/files/styles/medium/private/250-elixir_fi_node_logo_0.png?itok=Gqkm4UPK" style="height: 90px;"/>
   </a>
 </div>
