Added DARIAH-DE logo

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,4 +5,7 @@
   <a href="http://www.elixir-finland.org/" title="ELIXIR-FI">
     <img alt="ELIXIR-FI banner" src="https://www.elixir-europe.org/system/files/styles/medium/private/250-elixir_fi_node_logo_0.png?itok=Gqkm4UPK" style="height: 90px;"/>
   </a>
+    <a href="https://de.dariah.eu/" title="DARIAH-DE">
+    <img alt="DARIAH-DE banner" src="https://de.dariah.eu/" style="height: 90px;"/>
+  </a>
 </div>
