--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -5,7 +5,10 @@
   <a href="http://www.elixir-finland.org/" title="ELIXIR-FI">
     <img alt="ELIXIR-FI banner" src="https://www.elixir-europe.org/system/files/styles/medium/private/250-elixir_fi_node_logo_0.png?itok=Gqkm4UPK" style="height: 90px;"/>
   </a>
-    <a href="https://de.dariah.eu/" title="DARIAH-DE">
-    <img alt="DARIAH-DE banner" src="https://de.dariah.eu/" style="height: 90px;"/>
+  <a href="https://de.dariah.eu/" title="DARIAH-DE">
+    <img alt="DARIAH-DE banner" src="https://de.dariah.eu/liferay-dariah-theme/images/dariah-logo.png" style="height: 90px;"/>
+  </a>
+  <a href="http://www.geant.org/" title="GEANT">
+    <img alt="GEANT banner" src="http://www.geant.org/Style%20Library/Geant/Images/logo.png" style="height: 90px;"/>
   </a>
 </div>
