Added AARC logo

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -11,4 +11,7 @@
   <a href="http://www.geant.org/" title="GEANT">
     <img alt="GEANT banner" src="http://www.geant.org/Style%20Library/Geant/Images/logo.png" style="height: 90px;"/>
   </a>
+  <a href="https://aarc-project.eu/" title="AARC">
+    <img alt="AARC banner" src="https://aarc-project.eu/wp-content/uploads/2015/04/AARC_logo_and_strapline1.png" style="height: 90px;"/>
+  </a>
 </div>
