Updated AARC logo

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,6 +12,6 @@
     <img alt="GEANT banner" src="http://www.geant.org/Style%20Library/Geant/Images/logo.png" style="height: 90px;"/>
   </a>
   <a href="https://aarc-project.eu/" title="AARC">
-    <img alt="AARC banner" src="https://aarc-project.eu/wp-content/uploads/2015/04/AARC_logo_and_strapline1.png" style="height: 90px;"/>
+    <img alt="AARC banner" src="https://www.google.co.uk/imgres?imgurl=https://aarc-project.eu/wp-content/uploads/2015/04/AARC-1.jpg&imgrefurl=https://aarc-project.eu/aarc-project-starts-towards-an-integrated-aai-for-research-and-education/&h=500&w=500&tbnid=wchA_WJ-C-_ppM:&docid=Dm6MT8hG5qitzM&ei=kleWVuD7DMGrPPrNlfgJ&tbm=isch&ved=0ahUKEwjgjOvN-KbKAhXBFQ8KHfpmBZ8QMwgiKAIwAg" style="height: 90px;"/>
   </a>
 </div>
