Updated AARC logo again again

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -12,6 +12,6 @@
     <img alt="GEANT banner" src="http://www.geant.org/Style%20Library/Geant/Images/logo.png" style="height: 90px;"/>
   </a>
   <a href="https://aarc-project.eu/" title="AARC">
-    <img alt="AARC banner" src="https://aarc-project.eu/wp-content/uploads/2015/04/AARC-1.jpg" style="height: 90px;"/>
+    <img alt="AARC banner" src="http://libereurope.eu/wp-content/uploads/2012/06/AARC_logo_2015-3.jpg" style="height: 90px;"/>
   </a>
 </div>
